[gd_scene load_steps=7 format=3 uid="uid://bmpwu7w7xyhfv"]

[ext_resource type="Texture2D" uid="uid://cg6mhbnvbsiai" path="res://assets/collectables/axe.png" id="1_4d6fw"]
[ext_resource type="Script" path="res://scenes/collectables/axe/axe_item.gd" id="2_qw8f5"]
[ext_resource type="Script" path="res://scenes/collectables/collectable_item.gd" id="2_yqnql"]
[ext_resource type="Resource" uid="uid://r4d20rp1bfr6" path="res://scenes/collectables/axe/axe_resource.tres" id="3_bydk7"]
[ext_resource type="PackedScene" uid="uid://c4exovrcqgwjg" path="res://scenes/collectables/sparkle_notification.tscn" id="5_1khcw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y8qah"]
radius = 21.6333

[node name="Axe" type="Sprite2D"]
texture = ExtResource("1_4d6fw")
script = ExtResource("2_qw8f5")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -12)
remote_path = NodePath("../CanvasLayer/SparkleNotification")
update_rotation = false
update_scale = false

[node name="CollectableItem" type="Area2D" parent="."]
script = ExtResource("2_yqnql")
resource = ExtResource("3_bydk7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableItem"]
position = Vector2(1.87243e-07, 2)
rotation = 0.610865
shape = SubResource("CircleShape2D_y8qah")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SparkleNotification" parent="CanvasLayer" instance=ExtResource("5_1khcw")]
visible = false
position = Vector2(0, -12)

[connection signal="collected" from="CollectableItem" to="." method="_on_collectable_item_collected"]
[connection signal="player_entered" from="CollectableItem" to="." method="_on_collectable_item_player_entered"]
[connection signal="player_exited" from="CollectableItem" to="." method="_on_collectable_item_player_exited"]
